--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
