--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.0.0"
   }
 }
