--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.0",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
     "gh-pages": "^3.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -15,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.12.0",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^12.0.0"
+    "@testing-library/react": "^12.0.0",
+    "@types/redux-logger": "^3.0.9"
   }
 }
